--- a/workflow/config.yaml
+++ b/workflow/config.yaml
@@ -63,14 +63,20 @@ mask:
 # Each build needs a name, a defined subsampling process, and geographic attributes used for subsampling.
 # Geography is specified by build attributes (e.g., `region`, `country`, `division`, `location`) that are referenced from subsampling schemes.
 builds:
-  europe4: # Hubei
-    subsampling_scheme: earlyeurope3
+  # europe4: # Hubei
+  #   subsampling_scheme: earlyeurope3
+  #   beast_analysis: 
+  #     - "201102_europe4"
+  # europe4b: # China sequences, same analysis
+  #   subsampling_scheme: earlyeurope4
+  #   beast_analysis: 
+  #     - "201102_europe4"
+  europe5: # Change times when Hubei lockdown, two flight matrix with mean dayly passengers
+    subsampling_scheme: earlyeurope3 #??
     beast_analysis: 
-      - "201102_europe4.xml"
-  europe4b: # China sequences
-    subsampling_scheme: earlyeurope4
-    beast_analysis: 
-      - "201102_europe4b.xml"
+      - "201106_europe5"
+      - "201106_europe5b" #log flight matrix
+
     
 
 # # Define subsampling scheme
@@ -262,7 +268,7 @@ beast:
   # BEAST2 jar file path
   jar: "/cluster/home/ceciliav/BDMM-Prime.jar"
   # List of parallel mcmc chains seeds to run 
-  n_mcmc: [1,2,3,4]
+  n_mcmc: [1,2,3,4,5]
   # Length of a mcmc chain, it has to be the same length than the one specified in the xml file
   l_mcmc: 10000000
   # Time for mcmc chains in cluster in minutes
